--- a/files/style.css
+++ b/files/style.css
@@ -307,7 +307,7 @@ a {
   width: 50%;
   float: left;
   text-align: left;
-  color: #ffffff;
+  color: #c8d4de;
   font-weight: 300;
   margin-bottom: 20px;
 }
